fixed grid spacing

--- a/css/style.css
+++ b/css/style.css
@@ -87,13 +87,8 @@ a {
 	text-align: center; /* center navbar text */
 }
 
-
-
-/* 
-	GRID
-*/
 .grid {
-	margin: 20px auto;
+	margin:0 auto;
 }
 
 /* clear fix */
@@ -103,16 +98,13 @@ a {
 	clear: both;
 }
 
-/*
- grid-item
-*/
 .grid-item img {
 	width: 250px;
 	height: 250px;
 	float: left;
 	padding: 10px; /* grid item frame / gutter */
 	background: #cba2a2; /* grid item frame color*/
-	margin: 10px;
+	margin: 10px 10px 30px 10px;
 }
 
 
@@ -139,8 +131,6 @@ a {
 	width: 100%;
 	float: left;
 	box-sizing: border-box; }
-
-
 
 
 /* footnote */
@@ -193,22 +183,10 @@ a {
 	.footnote {
 	 padding-top: 10px;
 	}
-	
+
 }
 
 @media (max-width: 320px) { /* todo. this is hard coded */
-	.grid {
-		margin:20px;
-			/* why does auto make left margin jump */
-	}
-	
-	.grid-item img {
-		width: 250px;
-		height: 250px;
-		padding: 10px;
-		margin: 10px auto;
-	}
-	
 	#cover-img {
 		width: 250px;
 	}
